fix : boolean 타입 변경, 기타 수정